# AvalonProject

./: README.md
.github/workflows/: backend-test.yml
avalon-backend/: .gitlab-ci.yml  README.md  main.py  pyproject.toml  requirements.txt
avalon-backend/app/: __init__.py  client.py  constants.py  events.py  game_events.py  room.py  util.py
avalon-backend/tests/: __init__.py  test_avalon_backend.py  test_avalon_p5_errors.py  test_avalon_p5_humans.py  test_avalon_p5_humans_complex.py  test_avalon_p5_minions.py  test_avalon_p8_humans.py
avalon-frontend/: package.json
avalon-frontend/.storybook/: preview.js
avalon-frontend/src/: App.js  index.js
avalon-frontend/src/Components/GameStates/ApproveTeam/: ApproveTeam.js  index.js
avalon-frontend/src/Components/GameStates/DayScreen/: DayScreen.js  DeselectPlayer.js  QuestStatus.js  SelectPlayer.js  index.js
avalon-frontend/src/Components/GameStates/EndScreen/: EndScreen.js
avalon-frontend/src/Components/GameStates/QuestScreen/: NonQuest.js  OnQuest.js  QuestScreen.js  index.js
avalon-frontend/src/Components/Lobby/: KickPlayer.js  KickPlayer.jsx  KickPlayer.stories.js  Lobby.js  index.js
avalon-frontend/src/Components/Login/: Login.js  index.js
avalon-frontend/src/Components/ReadyScreen/: ReadyScreen.js  ReadyScreen.stories.js  index.js
avalon-frontend/src/Components/Setup/: Setup.js  Setup.stories.jsx  index.js
