[tool.poetry]
name = "avalon-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
pylint-flask = "^0.6"
flask-socketio = "^4.2.1"
eventlet = "^0.25.2"
pytest = "^5.4.1"
flake8 = "^3.7.9"
namegenerator = "^1.0.6"
markupsafe = "2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
