[project]
dependencies = [
    "Flask<2.0.0,>=1.1.2",
    "pylint-flask<1.0,>=0.6",
    "flask-socketio<5.0.0,>=4.2.1",
    "eventlet<1.0.0,>=0.25.2",
    "pytest>=6.2.5",
    "flake8<4.0.0,>=3.7.9",
    "namegenerator<2.0.0,>=1.0.6",
    "markupsafe==2.0.1",
]
name = "avalon-backend"
version = "0.1.0"
description = "Avalon Project Backend"
authors = [
    {name = "robustprogram", email = "robustprogram@gmail.com"},
]

[dependency-groups]
dev = [
    "pytest>=6.0",
]

[tool.uv]
default-groups = []
